--- a/assets/navbar/navbar.scss
+++ b/assets/navbar/navbar.scss
@@ -78,10 +78,16 @@
 
 summary {
     font-weight: bold;
+
+}
+ul{
+    list-style: none;
+    text-align: left;
 }
 a{
         background-color: $C3;    
-        padding:5px 15px 5px 15px;
+        padding:5px 20px 5px 20px;
+box-shadow: 3px 3px 4px black;
         z-index: 99 !important;
 }
         }
@@ -92,7 +98,6 @@ details[open] {
     padding: 0.5em;
         background-color: $C3;
         width:25vw;
-
 }
 
 details[open] summary {
