--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -172,7 +172,7 @@ margin-bottom: 5px;
         background-color: $C1;
         width:90%;
         margin:auto auto;
-      
+      margin-bottom: 5px;
 	border-radius:50px 50px 50px 50px;    text-align: center;
 
         img{
@@ -230,7 +230,7 @@ p{
             background-color: $C1;
         width:90%;
         margin:auto auto;
-      
+      margin-bottom: 5px;
 	border-radius:50px 50px 50px 50px;    text-align: center;
    
 
