--- a/assets/navbar/navbar.scss
+++ b/assets/navbar/navbar.scss
@@ -60,9 +60,11 @@
     @media (orientation: portrait) {
         header a span {
             font-size: 0;
+            
         }
                 header summary span {
             font-size: 0;
+            
         }
     }
 
@@ -89,6 +91,8 @@ a{
         padding:5px 20px 5px 20px;
 box-shadow: 3px 3px 4px black;
         z-index: 99 !important;
+                            margin: 5%;
+
 }
         }
 
@@ -98,10 +102,12 @@ details[open] {
     padding: 0.5em;
         background-color: $C3;
         width:25vw;
+        
 }
 
 details[open] summary {
     border-bottom: 1px solid $C2;
     margin-bottom: 0.5em;
         background-color: $C3;
+
 }
