--- a/assets/css/porte-folio.css
+++ b/assets/css/porte-folio.css
@@ -42,32 +42,6 @@ h2 {
 .sites article p:nth-child(2n+1) {
   text-align: right;
 }
-.sites article a {
-  box-shadow: inset 0px 1px 0px 0px #54a3f7;
-  background-color: #007dc1;
-  border-radius: 3px 3px 0 0;
-  border: 1px solid #124d77;
-  display: block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 13px;
-  padding: 6px 24px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #154682;
-  transition: all 0.1s;
-}
-.sites article a:hover {
-  background-color: #0061a7;
-  padding-left: 10%;
-}
-.sites article a:hover::after {
-  content: " >>";
-}
-.sites article a:active {
-  position: relative;
-  top: 1px;
-}
 
 .Behance {
   background-color: rgb(255, 255, 255);
@@ -176,38 +150,27 @@ h2 {
 .gmaps .progress_bar {
   width: 100%;
   background-color: rgba(0, 0, 12, 0.376);
-  display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+}
+.gmaps .progress_bar label {
+  font-size: larger;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.gmaps .progress_bar label kbd {
+  color: rgb(0, 0, 12);
+  font-weight: bold;
+}
+.gmaps .progress_bar progress {
+  width: 100%;
+  height: 25px;
+  accent-color: rgb(76, 133, 189);
 }
 .gmaps .progress_bar div {
   background-color: rgb(76, 133, 189);
   flex-grow: 2;
-}
-.gmaps a {
-  box-shadow: inset 0px 1px 0px 0px #54a3f7;
-  background-color: #007dc1;
-  border-radius: 3px 3px 0 0;
-  margin: auto auto;
-  border: 1px solid #124d77;
-  display: block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 13px;
-  padding: 10px 30px;
-  text-align: center;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #154682;
-  transition: all 0.1s;
-}
-.gmaps a:hover {
-  background-color: #0061a7;
-  padding-left: 10%;
-}
-.gmaps a:active {
-  position: relative;
-  top: 1px;
 }
 
 .LinkedIn {
@@ -229,28 +192,40 @@ h2 {
   color: rgb(76, 133, 189);
   text-align: center;
 }
-.LinkedIn a {
+
+a.lien {
   box-shadow: inset 0px 1px 0px 0px #54a3f7;
   background-color: #007dc1;
   border-radius: 3px 3px 0 0;
-  margin: auto auto;
   border: 1px solid #124d77;
   display: block;
   cursor: pointer;
   color: #ffffff;
   font-family: Arial;
   font-size: 13px;
-  padding: 10px 30px;
-  text-align: center;
   text-decoration: none;
   text-shadow: 0px 1px 0px #154682;
   transition: all 0.1s;
 }
-.LinkedIn a:hover {
+@media (orientation: landscape) {
+  a.lien {
+    padding: 6px 24px;
+  }
+}
+@media (orientation: portrait) {
+  a.lien {
+    padding: 20px 24px;
+    font-size: larger;
+  }
+}
+a.lien:hover {
   background-color: #0061a7;
   padding-left: 10%;
 }
-.LinkedIn a:active {
+a.lien:hover::after {
+  content: " >>";
+}
+a.lien:active {
   position: relative;
   top: 1px;
 }/*# sourceMappingURL=porte-folio.css.map */
