--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -47,33 +47,6 @@ margin-bottom: 5px;
                 text-align:right;
             }
         }
-        a{
-            	box-shadow:inset 0px 1px 0px 0px #54a3f7;
-	background-color:#007dc1;
-	border-radius:3px 3px 0 0;
-	border:1px solid #124d77;
-	display:block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #154682;
-    transition: all 0.1s;
-            &:hover{
-                background-color:#0061a7;
-                padding-left: 10%;
-&::after{
-   
-content: " >>";
-}
-            }
-            &:active{
-                position:relative;
-	top:1px;
-            }
-        }
     }
 }
 
@@ -190,40 +163,28 @@ p{
 .progress_bar{
     width:100%;
     background-color: $C3a;
-    display: flex;
+    label{
+        font-size: larger;
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+        kbd{
+            color:$C3;
+            font-weight: bold;
+        }
+
+    }
+    progress{
+        width:100%;
+        height:25px;
+        accent-color: $C2;
+    }
     justify-content:space-between;
     margin-bottom: 10px;
     div{
         background-color: $C2;flex-grow: 2;
     }
 }
-
-
-      a{   box-shadow:inset 0px 1px 0px 0px #54a3f7;
-	background-color:#007dc1;
-	border-radius:3px 3px 0 0;
-    margin:auto auto;
-	border:1px solid #124d77;
-	display:block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	    padding: 10px 30px;
-         text-align: center;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #154682;
-    transition: all 0.1s;
-            &:hover{
-                background-color:#0061a7;
-                padding-left: 10%;
-
-            }
-            &:active{
-                position:relative;
-	top:1px;
-            }
-        }
 }
        
 .LinkedIn{
@@ -245,29 +206,37 @@ p{
     color:$C2;
         text-align: center;
 
-}      a{   box-shadow:inset 0px 1px 0px 0px #54a3f7;
-	background-color:#007dc1;
-	border-radius:3px 3px 0 0;
-    margin:auto auto;
-	border:1px solid #124d77;
-	display:block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	    padding: 10px 30px;
-         text-align: center;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #154682;
-    transition: all 0.1s;
-            &:hover{
-                background-color:#0061a7;
-                padding-left: 10%;
+}
+}
 
-            }
-            &:active{
-                position:relative;
-	top:1px;
-            }
-        }
+// Les boutons de liens
+
+a.lien{
+    box-shadow:inset 0px 1px 0px 0px #54a3f7;
+background-color:#007dc1;
+border-radius:3px 3px 0 0;
+border:1px solid #124d77;
+display:block;
+cursor:pointer;
+color:#ffffff;
+font-family:Arial;
+font-size:13px;
+@media (orientation: landscape) {padding:6px 24px;}
+@media (orientation: portrait) {padding:20px 24px; font-size: larger;}
+
+text-decoration:none;
+text-shadow:0px 1px 0px #154682;
+transition: all 0.1s;
+&:hover{
+    background-color:#0061a7;
+    padding-left: 10%;
+&::after{
+
+content: " >>";
+}
+}
+&:active{
+    position:relative;
+top:1px;
+}
 }
