--- a/assets/cv/CV_CSS/CM.css
+++ b/assets/cv/CV_CSS/CM.css
@@ -50,17 +50,9 @@ main h3 {
   margin: 0;
   border-radius: 10px 100px/120px;
 }
-main .Slogan {
-  background-color: white;
-  color: #4c85bd;
+main .slogan {
   text-align: center;
-  border-radius: 30px;
-}
-main .Slogan samp::before {
-  content: '"';
-}
-main .Slogan samp::after {
-  content: '"';
+  padding: 10px;
 }
 main ul {
   list-style: none;
