--- a/assets/cv/CV_CSS/CM.scss
+++ b/assets/cv/CV_CSS/CM.scss
@@ -54,18 +54,10 @@ $C5:rgb(100, 100, 100);
         border-radius: 10px 100px / 120px;
     }
 
-    .Slogan{
-        background-color: $C4;
-        color:$C2;
-        text-align: center;
-border-radius: 30px;    samp{
-        &::before{
-            content:'"';
-        }
-                &::after{
-            content:'"';
-        }
-    }}
+.slogan{
+    text-align: center;
+    padding:10px;
+}
 
     ul{
         list-style: none;
