--- a/assets/navbar/navbar.scss
+++ b/assets/navbar/navbar.scss
@@ -25,7 +25,7 @@
             text-decoration: none !important;
             width: 25%;
             font-weight: bold;
-                    background-color: $C3;
+            background-color: $C3;
             img {
                 height: 40px;
                 margin: 0;
@@ -60,54 +60,66 @@
     @media (orientation: portrait) {
         header a span {
             font-size: 0;
-            
         }
-                header summary span {
+        header summary span {
             font-size: 0;
-            
         }
     }
-
+    
     details {
-                z-index: 99 !important;
-        background-color: $C3;
-    color:white;
-    width: 25vw;
-    margin-bottom: 0.5em;
-    text-align: center;
+        z-index: 99 !important;
+        color: white;
+        width: 25vw;
+        margin-bottom: 0.5em;
+        text-align: center;
         padding: 0.5em;
         cursor: pointer;
+        summary {
+            font-weight: bold;
+        }
+        @media (orientation: portrait) {
+            ul {
+                list-style: none;
+                text-align: left;
+                background-color: $C3;
 
-summary {
-    font-weight: bold;
-
-}
-ul{
-    list-style: none;
-    text-align: left;
-}
-a{
-        background-color: $C3;    
-        padding:5px 20px 5px 20px;
-box-shadow: 3px 3px 4px black;
-        z-index: 99 !important;
-                            margin: 5%;
-
-}
+                box-shadow: 3px 3px 4px black;
+                padding:0;
+            a {
+                padding: 5px 20px 5px 20px;
+                z-index: 99 !important;
+                display: block;
+                width:50px;
+            }
+        }
+        }
+        @media (orientation: landscape) {
+            ul {
+                list-style: none;
+                text-align: left;
+                background-color: $C3;
+                box-shadow: 3px 3px 4px black;
+                padding:0;
+            
+            a {
+                padding: 5px 20px 5px 20px;
+                z-index: 99 !important;
+                display: block;
+                width:230px;
+            }}
         }
 
 
-
-details[open] {
-    padding: 0.5em;
+    }
+    
+    details[open] {
+        padding: 0.5em;
         background-color: $C3;
-        width:25vw;
-        
-}
-
-details[open] summary {
-    border-bottom: 1px solid $C2;
-    margin-bottom: 0.5em;
+        width: 25vw;
+    }
+    
+    details[open] summary {
+        border-bottom: 1px solid $C2;
+        margin-bottom: 0.5em;
         background-color: $C3;
-
-}
+    }
