--- a/assets/css/porte-folio.css
+++ b/assets/css/porte-folio.css
@@ -150,8 +150,6 @@ h2 {
 .gmaps .progress_bar {
   width: 100%;
   background-color: rgba(0, 0, 12, 0.376);
-  justify-content: space-between;
-  margin-bottom: 10px;
 }
 .gmaps .progress_bar label {
   font-size: larger;
@@ -163,12 +161,30 @@ h2 {
   color: rgb(0, 0, 12);
   font-weight: bold;
 }
-.gmaps .progress_bar progress {
+.gmaps .progress_bar progress[value] {
   width: 100%;
   height: 25px;
   accent-color: rgb(76, 133, 189);
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
-.gmaps .progress_bar div {
+.gmaps .progress_bar progress[value]::-webkit-progress-bar {
+  background-color: whiteSmoke;
+  border-radius: 3px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5) inset;
+  border: rgba(255, 255, 255, 0) 0px solid;
+  z-index: 0;
+}
+.gmaps .progress_bar progress[value]::-webkit-progress-value {
+  position: relative;
+  background-color: rgb(76, 133, 189);
+  box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.75);
+  z-index: 99;
+}
+.gmaps .progress_bar progress[value] div {
   background-color: rgb(76, 133, 189);
   flex-grow: 2;
 }
