--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -174,16 +174,29 @@ p{
         }
 
     }
-    progress{
+    progress[value]{
         width:100%;
         height:25px;
         accent-color: $C2;
-    }
+        appearance: none;
+        &::-webkit-progress-bar {
+            background-color: whiteSmoke;
+            border-radius: 3px;
+            box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
+            border: #ffffff00 0px solid;
+            z-index: 0;
+
+          }
+          &::-webkit-progress-value {
+            position: relative;
+            background-color:$C2;
+            box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75);            z-index: 99;
+          }
     justify-content:space-between;
     margin-bottom: 10px;
     div{
         background-color: $C2;flex-grow: 2;
-    }
+    }}
 }
 }
        
@@ -240,3 +253,5 @@ content: " >>";
 top:1px;
 }
 }
+
+
