--- a/assets/navbar/navbar.scss
+++ b/assets/navbar/navbar.scss
@@ -4,7 +4,7 @@
     $C3a: #00000c60;
     @import url('https://fonts.googleapis.com/css?family=Oswald');
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
-    @import url("https://fr.allfont.net/allfont.css?fonts=lexia");
+    @import url('https://fr.allfont.net/allfont.css?fonts=lexia');
     body {
         margin: 0;
     }
