--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -157,17 +157,22 @@ margin-bottom: 5px;
 p{
     color:$C2;
         text-align: center;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 
 }
 
 .progress_bar{
     width:100%;
     background-color: $C3a;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
     label{
         font-size: larger;
         display: flex;
         justify-content: space-between;
         align-items: stretch;
+        
         kbd{
             color:$C3;
             font-weight: bold;
@@ -205,9 +210,8 @@ p{
         width:90%;
         margin:auto auto;
       margin-bottom: 5px;
-	border-radius:50px 50px 50px 50px;    text-align: center;
-   
-
+	border-radius:50px 50px 50px 50px;    
+    text-align: center;
         img{
             width:70px;
             border-radius: 100%;
@@ -218,7 +222,29 @@ p{
 p{
     color:$C2;
         text-align: center;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
+}
+}
+
+.BehanceProfil{
+    background-color: $C1;
+width:90%;
+margin:auto auto;
+margin-bottom: 5px;
+border-radius:50px 50px 50px 50px;    
+text-align: center;
+img{
+    width:70px;
+    border-radius: 100%;
+}
+h3{
+    color:$C3;
+}
+p{
+color:$C2;
+text-align: center;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 }
 
