--- a/assets/css/apps.scss
+++ b/assets/css/apps.scss
@@ -12,7 +12,9 @@ $C3a: #00000c60;
         box-shadow: $C3a 2px 2px 2px;
         padding: 20px;
         text-align: center;
-        color: $C1;
+        color: $C3;
+        font-weight: bold;
+        background-color: $C1;
     }
 }
 
