--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 body {
   background-color: #4c85bd;
+  color: #00000C;
 }
 
 html {
@@ -9,6 +10,9 @@ html {
 
 .lien_magique {
   color: yellow;
+  background-color: #00000C;
+  border-radius: 25%;
+  padding: 5px;
 }
 .lien_magique:hover {
   color: yellow;
@@ -26,7 +30,7 @@ html {
     text-shadow: #00000C 0 1px 0;
   }
   main {
-    color: white;
+    color: #00000C;
   }
   main .intro {
     border-top: rgba(0, 0, 12, 0.3764705882) solid 2px;
@@ -35,9 +39,13 @@ html {
     padding: 20px;
     text-align: center;
     margin-bottom: 20px;
+    background-color: white;
   }
   main .intro a {
     color: yellow;
+    background-color: #00000C;
+    border-radius: 25%;
+    padding: 5px;
   }
   main .intro a:hover {
     text-decoration: none;
@@ -80,8 +88,18 @@ html {
     display: block;
     border-bottom: 2px white solid;
     width: 100%;
-    background-color: #4c85bd;
+    background-color: white;
     border-radius: 0 0 50px 50px;
+    color: #00000C;
+    font-weight: bolder;
+    font-size: large;
+    padding: 5px 0 5px 0;
+  }
+  main .inline .technologies li,
+  main .inline .logiciels li,
+  main .inline .capacites li,
+  main .inline .programmes li {
+    padding: 5px 0 5px 0;
   }
   main .inline .technologies li:nth-child(2n-1),
   main .inline .logiciels li:nth-child(2n-1),
@@ -125,16 +143,20 @@ html {
     text-shadow: #00000C 0 1px 0;
   }
   main {
-    color: white;
+    color: #00000C;
   }
   main .intro {
     border-top: rgba(0, 0, 12, 0.3764705882) solid 2px;
     border-bottom: rgba(0, 0, 12, 0.3764705882) solid 2px;
     text-align: center;
     padding: 5px;
+    background-color: white;
   }
   main .intro a {
     color: yellow;
+    background-color: #00000C;
+    border-radius: 25%;
+    padding: 5px;
   }
   main .intro a:hover {
     text-decoration: none;
@@ -174,8 +196,18 @@ html {
     display: block;
     border-bottom: 2px white solid;
     width: 100%;
-    background-color: #4c85bd;
+    background-color: white;
     border-radius: 0 0 50px 50px;
+    color: #00000C;
+    font-weight: bolder;
+    font-size: large;
+    padding: 5px 0 5px 0;
+  }
+  main .inline .technologies li,
+  main .inline .logiciels li,
+  main .inline .capacites li,
+  main .inline .programmes li {
+    padding: 10px 0 10px 0;
   }
   main .inline .technologies li:nth-child(2n-1),
   main .inline .logiciels li:nth-child(2n-1),
@@ -242,7 +274,9 @@ html {
   box-shadow: rgba(0, 0, 12, 0.3764705882) 2px 2px 2px;
   padding: 20px;
   text-align: center;
-  color: white;
+  color: #00000C;
+  font-weight: bold;
+  background-color: white;
 }
 .parcours a {
   padding: 0.2rem 0.4rem;
@@ -310,9 +344,9 @@ html {
     height: 10%;
   }
   .parcours .parc article img {
-    width: 10%;
+    width: 20%;
     margin: auto auto;
-    height: 10%;
+    height: 20%;
     display: block;
   }
   .parcours .parc article div:nth-child(2n) {
@@ -347,10 +381,11 @@ html {
 
 .copyright {
   text-align: center;
-  color: white;
-}
-
-.dys {
-  font-family: "Lexia", arial;
-  font-size: 16px;
+  color: #00000C;
+  font-weight: bolder;
+  padding: 20px 0 20px 0;
+  background-color: white;
+  width: 98%;
+  margin: auto auto;
+  font-size: larger;
 }/*# sourceMappingURL=main.css.map */
