Amélioration de la netteté

--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -27,8 +27,8 @@
   }
   .appsview article a:hover {
     text-decoration: none;
-    background-color: #00000C;
-    color: white;
+    background-color: white;
+    color: #00000C;
   }
 }
 @media screen and (max-width: 1280px) {
@@ -48,8 +48,8 @@
   }
   .appsview article a:hover {
     text-decoration: none;
-    background-color: #00000C;
-    color: white;
+    background-color: white;
+    color: #00000C;
   }
 }
 .appsview article {
@@ -71,10 +71,18 @@
   padding: 10px;
 }
 .appsview article a {
-  background-color: #4c85bd;
-  color: white;
+  background-color: white;
+  color: #00000C;
   padding: 10px;
   margin: 2px;
   text-decoration: none;
   border-radius: 10px;
+  border: #00000C 2px solid;
+}
+.appsview article a:active {
+  background-color: grey;
+}
+.appsview article a:hover {
+  text-decoration: none;
+  background-color: lightgray;
 }/*# sourceMappingURL=apps.css.map */
