--- a/assets/css/apps.scss
+++ b/assets/css/apps.scss
@@ -32,8 +32,8 @@ $C3a: #00000c60;
                 margin: 5px;
                 &:hover {
                     text-decoration: none;
-                    background-color: $C3;
-                    color: $C1;
+                    background-color: $C1;
+                    color: $C3;
                 }
             }
         }
@@ -54,8 +54,8 @@ $C3a: #00000c60;
                 margin: 5px;
                 &:hover {
                     text-decoration: none;
-                    background-color: $C3;
-                    color: $C1;
+                    background-color: $C1;
+                    color: $C3;
                 }
             }
         }
@@ -81,12 +81,20 @@ $C3a: #00000c60;
             padding: 10px;
         }
         a {
-            background-color: $C2;
-            color: $C1;
+            background-color: $C1;
+            color: $C3;
             padding: 10px;
             margin: 2px;
             text-decoration: none;
             border-radius: 10px;
+            border: $C3 2px solid;
+            &:active{
+                background-color: grey;
+            }
+            &:hover {
+                text-decoration: none;
+                background-color: lightgray;
+            }
         }
     }
 }
