--- a/assets/cv/CV_CSS/EdS.css
+++ b/assets/cv/CV_CSS/EdS.css
@@ -88,7 +88,7 @@ main ul li a {
 section {
   font-weight: bold;
 }
-section:nth-child(n+3) {
+section:not(:first-child) {
   background-color: rgb(192, 192, 192);
 }
 section ul {
@@ -96,4 +96,4 @@ section ul {
 }
 section ul li:before {
   content: "  ";
-}/*# sourceMappingURL=CM.css.map */
+}/*# sourceMappingURL=EdS.css.map */
