--- a/assets/css/porte-folio.scss
+++ b/assets/css/porte-folio.scss
@@ -50,6 +50,24 @@ margin-bottom: 5px;
     }
 }
 
+.sec{
+    background-color: $C1;
+    background-color: $C1;
+    width:90%;
+    margin:auto auto;
+  margin-bottom: 5px;
+border-radius:50px 50px 50px 50px;    text-align: center;
+}
+
+.artstation{
+    background-color: $C1;
+    background-color: $C1;
+    width:90%;
+    margin:auto auto;
+  margin-bottom: 5px;
+border-radius:50px 50px 50px 50px;    text-align: center;
+}
+
 .Behance{
     background-color: $C1;
     color:$C2;
