--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -278,17 +278,22 @@ $bg-height: 50px;
         background-color: $C1;
     }
     a {
-        padding: 0.2rem 0.4rem;
-        font-size: 87.5%;
-        color: #fff;
-        background-color: #212529;
-        border-radius: 0.2rem;
-        white-space: nowrap;
+        box-shadow: inset 0 0 0 0 $C2;
+        color: $C2;
         text-decoration: none;
-        &:hover {
-            text-decoration: underline;
+        transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+        &:before{
+            content : "\0000A0";
         }
-    }
+        &:after{
+            content : "\0000A0";
+        }
+      &:hover {
+        box-shadow: inset 200px 0 0 0 $C2;
+        color: white;
+      }
+    }}
+    
     @media screen and (min-width: 1280px) {
         .parc {
             display: grid;
@@ -376,14 +381,7 @@ $bg-height: 50px;
             }
         }
     }
-    a {
-        padding: 0.2rem 0.4rem;
-        font-size: 87.5%;
-        color: #fff;
-        background-color: #212529;
-        border-radius: 0.2rem
-    }
-}
+
 
 .copyright {
     text-align: center;
